Thu Dec 23 06:35:41 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/net/smtp.rb: Net::SMTP should close the SSL connection if the
	  connection verification fails.

Thu Dec 23 01:47:58 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: remove #object_id. [ruby-dev:42840]

Wed Dec 22 08:56:39 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: add Module#private_constant and Module#public_constant.
	  [ruby-dev:39685][ruby-core:32698]

Wed Dec 22 07:59:23 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: add IO#advise. [ruby-core:33110] [Ruby 1.9-Feature#4038]

Tue Dec 21 23:45:31 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (Init_GC): move back object_id to Kernel. [ruby-dev:42840]

Tue Dec 21 12:45:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (target_archs): remove temporary objects.

	* enc/Makefile.in, enc/depend (clean): remove work directories.

Tue Dec 21 07:39:12 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c: parenthesize macro arguments.

Tue Dec 21 06:25:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rexml/test_contrib.rb (ContribTester#test_pos): should not
	  use fixed path name for tests.  [ruby-dev:42827]

	* test/rexml/test_sax.rb (SAX2Tester#test_socket): should not use
	  fixed port for tests.  [ruby-dev:42828]

Tue Dec 21 06:10:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (setup_args), vm.c (invoke_block_from_c),
	  vm_insnhelper.c (caller_setup_args): reverted r30241 and r30243
	  except for the test.

Tue Dec 21 01:41:42 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* io.c : add an extra byte to buffer for the specification of read
	  in Windows. see [ruby-core:33460] and r29980. and, we have to
	  discuss how to do this one byte.

Tue Dec 21 01:18:06 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* error.c: Fix build error for win32. This regression was
	  introduced by r30271.

Tue Dec 21 00:59:40 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
