@@ -1,3 +1,8 @@
+Thu Dec 23 08:12:59 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* lib/net/smtp.rb: refactoring Net::SMTP#esmtp= to use an
+	  attr_accessor
+
 Thu Dec 23 06:35:41 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* lib/net/smtp.rb: Net::SMTP should close the SSL connection if the
